--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <artifactId>jeninstest</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>jeninstest</name>
+    <packaging>war</packaging>
     <description>Demo project for Spring Boot</description>
 
     <properties>
